<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/box_one"
        style="@style/whiteBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/box_one"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/box_two_text"
        style="@style/whiteBox"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:text="@string/box_two"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/box_one"
        app:layout_constraintTop_toBottomOf="@id/box_one"/>

    <TextView
        android:id="@+id/box_three_text"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/box_tree"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintEnd_toEndOf="@id/box_one"
        app:layout_constraintTop_toBottomOf="@+id/box_one"/>

    <TextView
        android:id="@+id/box_four_text"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_four"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@id/box_one"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_three_text"/>

    <TextView
        android:id="@+id/box_six_text"
        style="@style/whiteBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/box_five"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="@id/box_one"
        app:layout_constraintStart_toEndOf="@id/box_two_text"
        app:layout_constraintTop_toBottomOf="@+id/box_four_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>